change uberdatavis link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
      <h1>Hello World!</h1>
-     <a href="https://finalproject-298600.wl.r.appspot.com">Uber Data Visualization</a>
+     <a href="https://uber-data-visualization-299706.ue.r.appspot.com">Uber Data Visualization</a>
 </body>
 </html>
