--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
      <h1>Hello World!</h1>
      <a href="https://uber-data-visualization-299706.ue.r.appspot.com">Uber Data Visualization</a>
      <a href="/views/view1.html">View 1</a>
-     <a href="https://youtu.be/iYjch18GWvI">Sorting Algorithms Visualizer</a>
+     <a href="https://youtu.be/iYjch18GWvI">Sorting Algorithms Visualizer Youtube</a>
+     <a href="https://github.com/ryanlazz16/Sorting-Algorithms-Visualizer">Sorting Algorithms Visualizer GitHub</a>
+     
 </body>
 </html>
