Added SP500 Links

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
      <a href="/views/view1.html">View 1</a>
      <a href="https://youtu.be/iYjch18GWvI">Sorting Algorithms Visualizer Youtube</a>
      <a href="https://github.com/ryanlazz16/Sorting-Algorithms-Visualizer">Sorting Algorithms Visualizer GitHub</a>
+     <a href="https://ryanlazz16.github.io/SP500Visualization">S&P 500 Visualization Website</a>
+     <a href="https://github.com/ryanlazz16/SP500Visualization">S&P 500 Visualization GitHub</a>
      
 </body>
 </html>
