Updated index.html links

--- a/index.html
+++ b/index.html
@@ -3,16 +3,27 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Document</title>
+     <title>Ryan Lazzareschi</title>
+     
 </head>
 <body>
-     <h1>Hello World!</h1>
-     <a href="https://uber-data-visualization-299706.ue.r.appspot.com">Uber Data Visualization</a>
-     <a href="/views/view1.html">View 1</a>
-     <a href="https://youtu.be/iYjch18GWvI">Sorting Algorithms Visualizer Youtube</a>
-     <a href="https://github.com/ryanlazz16/Sorting-Algorithms-Visualizer">Sorting Algorithms Visualizer GitHub</a>
-     <a href="https://ryanlazz16.github.io/SP500Visualization">S&P 500 Visualization Website</a>
-     <a href="https://github.com/ryanlazz16/SP500Visualization">S&P 500 Visualization GitHub</a>
-     
+     <div>
+          <a href="https://uber-data-visualization-299706.ue.r.appspot.com">Uber Data Visualization</a>
+          <a href="https://github.com/ryanlazz16/189L-Final">Uber Data Visualization GitHub</a>
+     </div>
+     <div>
+          <a href="https://youtu.be/iYjch18GWvI">Sorting Algorithms Visualizer Youtube</a>
+          <a href="https://github.com/ryanlazz16/Sorting-Algorithms-Visualizer">Sorting Algorithms Visualizer GitHub</a>
+     </div>
+     <div>
+          <a href="https://ryanlazz16.github.io/SP500Visualization">S&P 500 Visualization Website</a>
+          <a href="https://github.com/ryanlazz16/SP500Visualization">S&P 500 Visualization GitHub</a>
+     </div>
+     <div>
+          <a href="https://ryanlazz16.github.io/Bay-Area-Coronavirus-Testing-Centers">Coronavirus Testing Centers Website</a>
+          <a href="https://github.com/ryanlazz16/Bay-Area-Coronavirus-Testing-Centers">Coronavirus Testing Centers GitHub</a>
+     </div>
+
+     <!-- <img src="./images/stockVisualization.png" alt="Stock Visualization Picture"> -->
 </body>
 </html>
