Updated project links

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Ryan Lazzareschi</title>
-     
 </head>
 <body>
      <div>
+          <!-- <img src="./images/stockVisualization.png" alt="Stock Visualization Picture"> -->
           <a href="https://uber-data-visualization-299706.ue.r.appspot.com">Uber Data Visualization</a>
           <a href="https://github.com/ryanlazz16/189L-Final">Uber Data Visualization GitHub</a>
      </div>
      <div>
-          <a href="https://youtu.be/iYjch18GWvI">Sorting Algorithms Visualizer Youtube</a>
-          <a href="https://github.com/ryanlazz16/Sorting-Algorithms-Visualizer">Sorting Algorithms Visualizer GitHub</a>
+          <a href="https://youtu.be/bnfUfbfKhEE?t=563">Smart Stock Youtube Demo</a>
+          <a href="https://github.com/ECS171-Group-5">Smart Stock GitHub</a>
      </div>
      <div>
           <a href="https://ryanlazz16.github.io/SP500Visualization">S&P 500 Visualization Website</a>
@@ -23,7 +23,13 @@
           <a href="https://ryanlazz16.github.io/Bay-Area-Coronavirus-Testing-Centers">Coronavirus Testing Centers Website</a>
           <a href="https://github.com/ryanlazz16/Bay-Area-Coronavirus-Testing-Centers">Coronavirus Testing Centers GitHub</a>
      </div>
-
-     <!-- <img src="./images/stockVisualization.png" alt="Stock Visualization Picture"> -->
+     <div>
+          <a href="https://youtu.be/RdK7y9B1Lsg?t=23">Neuroevolution Flappy Bird Youtube</a>
+          <a href="https://github.com/ryanlazz16/Neuroevolution-Flappy-Bird">Neuroevolution Flappy Bird GitHub</a>
+     </div>
+     <div>
+          <a href="https://youtu.be/iYjch18GWvI">Sorting Algorithms Visualizer Youtube</a>
+          <a href="https://github.com/ryanlazz16/Sorting-Algorithms-Visualizer">Sorting Algorithms Visualizer GitHub</a>
+     </div>
 </body>
 </html>
