--- a/index.html
+++ b/index.html
@@ -6,24 +6,42 @@
      <title>Ryan Lazzareschi</title>
      <link rel="preconnect" href="https://fonts.gstatic.com">
      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="./reset.css" />
+     <script src="https://kit.fontawesome.com/cbc31d67ff.js" crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" defer></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js" defer></script>
+
+     <script src="./index.js" defer></script>
+    <link rel="stylesheet" href="./reset.css" />
      <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
      <section class="hero">
           <div class="about">
-               <h3>Ryan Lazzareschi</h3>
+               <h1>Ryan Lazzareschi</h1>
                <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero accusantium quibusdam itaque perferendis at nostrum deleniti fuga. Dolor ratione veritatis magnam possimus repellat eum consequatur eius. Delectus aspernatur cumque iure! Lorem ipsum dolor sit.</h5>
+
+               <a href="https://github.com/ryanlazz16"><button>
+                    <i class="fab fa-github"></i>&nbsp;GitHub
+               </button></a>
+               <a href="https://www.linkedin.com/in/ryanlazzareschi/"><button>
+                    <i class="fab fa-linkedin"></i>&nbsp;LinkedIn
+               </button></a>
+               <a href="mailto:ryanlazz16@gmail.com"><button>
+                    <i class="fas fa-envelope"></i>&nbsp;Email
+               </button></a>
+               <a href="/resume.pdf" download><button>
+                    <i class="fas fa-file-pdf"></i>&nbsp;Resume
+               </button></a>
           </div>
           <img class="profile" src="./images/profile.png" alt="Profile Image">
      </section>
 
      <section class="projects">
-          <h4>Projects</h4>
+          <h2>Projects</h2>
 
-          <div class="project">
+          <div class="project p1">
                <div class="project-left">
-                    <h5>Uber Data Visualization</h5>
+                    <h3>Uber Data Visualization</h3>
                     <a href="https://uber-data-visualization-299706.ue.r.appspot.com">Website</a>
                     <a href="https://github.com/ryanlazz16/189L-Final">GitHub</a>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque molestias earum obcaecati culpa fugiat nesciunt nihil tempora ratione id fugit ipsam quas exercitationem ad suscipit, pariatur esse molestiae voluptas? Cumque nihil repellendus eaque, quisquam sit possimus veritatis rem praesentium soluta delectus explicabo nostrum omnis est. Itaque animi cupiditate harum reiciendis doloribus. Perspiciatis eius, recusandae, tenetur distinctio iusto, deleniti maxime dignissimos magnam dolorem animi doloribus quaerat ea? Consectetur inventore rerum facere cum sed earum possimus, voluptatibus quo officia sunt architecto accusantium quia illum vel quae quibusdam facilis dolore quasi necessitatibus corrupti! Ex iusto at tempora nam totam dolorum labore, suscipit quaerat?</p>     
@@ -36,9 +54,9 @@
                </div>
           </div>
 
-          <div class="project">
+          <div class="project p2">
                <div class="project-left">
-                    <h5>Smart Stock</h5>
+                    <h3>Smart Stock</h3>
                     <a href="https://youtu.be/bnfUfbfKhEE?t=563">Youtube</a>
                     <a href="https://github.com/ECS171-Group-5">GitHub</a>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque molestias earum obcaecati culpa fugiat nesciunt nihil tempora ratione id fugit ipsam quas exercitationem ad suscipit, pariatur esse molestiae voluptas? Cumque nihil repellendus eaque, quisquam sit possimus veritatis rem praesentium soluta delectus explicabo nostrum omnis est. Itaque animi cupiditate harum reiciendis doloribus. Perspiciatis eius, recusandae, tenetur distinctio iusto, deleniti maxime dignissimos magnam dolorem animi doloribus quaerat ea? Consectetur inventore rerum facere cum sed earum possimus, voluptatibus quo officia sunt architecto accusantium quia illum vel quae quibusdam facilis dolore quasi necessitatibus corrupti! Ex iusto at tempora nam totam dolorum labore, suscipit quaerat?</p>     
@@ -51,9 +69,9 @@
                </div>
           </div>
           
-          <div class="project">
+          <div class="project p3">
                <div class="project-left">
-                    <h5>S&P 500 Visualization</h5>
+                    <h3>S&P 500 Visualization</h3>
                     <a href="https://ryanlazz16.github.io/SP500Visualization">Website</a>
                     <a href="https://github.com/ryanlazz16/SP500Visualization">GitHub</a>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque molestias earum obcaecati culpa fugiat nesciunt nihil tempora ratione id fugit ipsam quas exercitationem ad suscipit, pariatur esse molestiae voluptas? Cumque nihil repellendus eaque, quisquam sit possimus veritatis rem praesentium soluta delectus explicabo nostrum omnis est. Itaque animi cupiditate harum reiciendis doloribus. Perspiciatis eius, recusandae, tenetur distinctio iusto, deleniti maxime dignissimos magnam dolorem animi doloribus quaerat ea? Consectetur inventore rerum facere cum sed earum possimus, voluptatibus quo officia sunt architecto accusantium quia illum vel quae quibusdam facilis dolore quasi necessitatibus corrupti! Ex iusto at tempora nam totam dolorum labore, suscipit quaerat?</p>     
@@ -66,9 +84,9 @@
                </div>
           </div>
 
-          <div class="project">
+          <div class="project p4">
                <div class="project-left">
-                    <h5>Coronavirus Testing Centers</h5>
+                    <h3>Coronavirus Testing Centers</h3>
                     <a href="https://ryanlazz16.github.io/Bay-Area-Coronavirus-Testing-Centers">Website</a>
                     <a href="https://github.com/ryanlazz16/Bay-Area-Coronavirus-Testing-Centers">GitHub</a>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque molestias earum obcaecati culpa fugiat nesciunt nihil tempora ratione id fugit ipsam quas exercitationem ad suscipit, pariatur esse molestiae voluptas? Cumque nihil repellendus eaque, quisquam sit possimus veritatis rem praesentium soluta delectus explicabo nostrum omnis est. Itaque animi cupiditate harum reiciendis doloribus. Perspiciatis eius, recusandae, tenetur distinctio iusto, deleniti maxime dignissimos magnam dolorem animi doloribus quaerat ea? Consectetur inventore rerum facere cum sed earum possimus, voluptatibus quo officia sunt architecto accusantium quia illum vel quae quibusdam facilis dolore quasi necessitatibus corrupti! Ex iusto at tempora nam totam dolorum labore, suscipit quaerat?</p>     
@@ -81,9 +99,9 @@
                </div>
           </div>
 
-          <div class="project">
+          <div class="project p5">
                <div class="project-left">
-                    <h5>Neuroevolution Flappy Bird</h5>
+                    <h3>Neuroevolution Flappy Bird</h3>
                     <a href="https://youtu.be/RdK7y9B1Lsg?t=23">Youtube</a>
                     <a href="https://github.com/ryanlazz16/Neuroevolution-Flappy-Bird">GitHub</a>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque molestias earum obcaecati culpa fugiat nesciunt nihil tempora ratione id fugit ipsam quas exercitationem ad suscipit, pariatur esse molestiae voluptas? Cumque nihil repellendus eaque, quisquam sit possimus veritatis rem praesentium soluta delectus explicabo nostrum omnis est. Itaque animi cupiditate harum reiciendis doloribus. Perspiciatis eius, recusandae, tenetur distinctio iusto, deleniti maxime dignissimos magnam dolorem animi doloribus quaerat ea? Consectetur inventore rerum facere cum sed earum possimus, voluptatibus quo officia sunt architecto accusantium quia illum vel quae quibusdam facilis dolore quasi necessitatibus corrupti! Ex iusto at tempora nam totam dolorum labore, suscipit quaerat?</p>     
@@ -96,9 +114,9 @@
                </div>
           </div>
 
-          <div class="project">
+          <div class="project p6">
                <div class="project-left">
-                    <h5>Sorting Algorithms Visualizer</h5>
+                    <h3>Sorting Algorithms Visualizer</h3>
                     <a href="https://youtu.be/iYjch18GWvI">Youtube</a>
                     <a href="https://github.com/ryanlazz16/Sorting-Algorithms-Visualizer">GitHub</a>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque molestias earum obcaecati culpa fugiat nesciunt nihil tempora ratione id fugit ipsam quas exercitationem ad suscipit, pariatur esse molestiae voluptas? Cumque nihil repellendus eaque, quisquam sit possimus veritatis rem praesentium soluta delectus explicabo nostrum omnis est. Itaque animi cupiditate harum reiciendis doloribus. Perspiciatis eius, recusandae, tenetur distinctio iusto, deleniti maxime dignissimos magnam dolorem animi doloribus quaerat ea? Consectetur inventore rerum facere cum sed earum possimus, voluptatibus quo officia sunt architecto accusantium quia illum vel quae quibusdam facilis dolore quasi necessitatibus corrupti! Ex iusto at tempora nam totam dolorum labore, suscipit quaerat?</p>     
@@ -112,6 +130,5 @@
           </div>
 
      </section>
-
 </body>
 </html>
