Fixed Flappy Bird Image

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
      <section class="hero">
           <div class="about">
                <h1>Ryan Lazzareschi</h1>
-               <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero accusantium quibusdam itaque perferendis at nostrum deleniti fuga. Dolor ratione veritatis magnam possimus repellat eum consequatur eius. Delectus aspernatur cumque iure! Lorem ipsum dolor sit.</h5>
-
+               <h5>I'm a third year computer science student currently attending UC Davis and based in the Bay Area. </h5>
                <a href="https://github.com/ryanlazz16"><button>
                     <i class="fab fa-github"></i>&nbsp;GitHub
                </button></a>
@@ -191,7 +190,7 @@
                
                <div class="project-right">
                     <a href="https://youtu.be/RdK7y9B1Lsg?t=23">
-                         <img src="./images/flappyWide.png" alt="Neuroevolution Flappy Bird">
+                         <img src="./images/flappyWide2.png" alt="Neuroevolution Flappy Bird">
                     </a>
                </div>
           </div>
