Fixed Uber Link and Modified Hero Section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 <body>
      <section class="hero">
           <div class="about">
+               <h4>Hi, my name is</h4>
                <h1>Ryan Lazzareschi</h1>
-               <h5>I'm a third year computer science student currently attending UC Davis and based in the Bay Area. </h5>
+               <h5>I'm a third year computer science student attending UC Davis and based in the Bay Area. My current interests are full-stack web development, visualization, and machine learning. I'm currently looking for internship or full-time opportunities beginning in summer 2021 and beyond. Feel free to contact me below!</h5>
                <a href="https://github.com/ryanlazz16"><button>
                     <i class="fab fa-github"></i>&nbsp;GitHub
                </button></a>
@@ -41,7 +42,7 @@
           <div class="project p1">
                <div class="project-left">
                     <h3>Uber Data Visualization</h3>
-                    <a class="link" href="https://uber-data-visualization-299706.ue.r.appspot.com">Website</a>
+                    <a class="link" href="https://youtu.be/9sgzIrooOhc">Website</a>
                     <a class="link" href="https://github.com/ryanlazz16/189L-Final">GitHub</a>
                     <ul>
                          <li>Interactive Website that visualizes over 18 million Uber pickups in New York City from 2014 and 2015 from this <a class="hyperlink" href="https://www.kaggle.com/fivethirtyeight/uber-pickups-in-new-york-city">Kaggle Dataset</a></li>
@@ -59,7 +60,7 @@
                </div>
                
                <div class="project-right">
-                    <a href="https://uber-data-visualization-299706.ue.r.appspot.com">
+                    <a href="https://youtu.be/9sgzIrooOhc">
                          <img src="./images/uberDataVis.png" alt="Uber Data Visualization">
                     </a>
                </div>
