Fixed Uber Youtube Link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="project p1">
                <div class="project-left">
                     <h3>Uber Data Visualization</h3>
-                    <a class="link" href="https://youtu.be/9sgzIrooOhc">Website</a>
+                    <a class="link" href="https://youtu.be/9sgzIrooOhc">Youtube</a>
                     <a class="link" href="https://github.com/ryanlazz16/189L-Final">GitHub</a>
                     <ul>
                          <li>Interactive Website that visualizes over 18 million Uber pickups in New York City from 2014 and 2015 from this <a class="hyperlink" href="https://www.kaggle.com/fivethirtyeight/uber-pickups-in-new-york-city">Kaggle Dataset</a></li>
