Added Computer Graphics Project

--- a/index.html
+++ b/index.html
@@ -66,6 +66,31 @@
                </div>
           </div>
 
+          <div class="project p7">
+               <div class="project-left">
+                    <h3>Graphics Algorithms with OpenGL</h3>
+                    <a class="link" href="https://youtu.be/wQPlBj3w1TA">Youtube</a>
+                    <ul>
+                         <li>C++ Application that implements several fundamental computer graphics algorithms with OpenGL</li>
+                         <li>Interact with 3D .obj objects with Arcball Camera</li>
+                         <li>Phong Lighting and Gouraud Shading to produce smoothly illuminated obejcts</li>
+                         <li>Painter's Algorithm for rasterizing polyons according to their depth</li>
+                         <li>Half-Toning with 3x3 pixel pattern for simulating binary display devices</li>
+                         <li>Shaders for Phong Lighting, Gouraud Shading, and Half-Toning written in GLSL</li>
+                    </ul>
+                    <div class="technologies">
+                         <button>C++</button>
+                         <button>OpenGL</button>
+                    </div> 
+               </div>
+               
+               <div class="project-right">
+                    <a href="https://youtu.be/wQPlBj3w1TA">
+                         <img src="./images/phong.png" alt="Graphics Algorithms with OpenGL">
+                    </a>
+               </div>
+          </div>
+
           <div class="project p2">
                <div class="project-left">
                     <h3>Smart Stock</h3>
