Modified Flappy Image

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                
                <div class="project-right">
                     <a href="https://youtu.be/RdK7y9B1Lsg?t=23">
-                         <img src="./images/flappyWide2.png" alt="Neuroevolution Flappy Bird">
+                         <img src="./images/flappy.png" alt="Neuroevolution Flappy Bird">
                     </a>
                </div>
           </div>
