Added Digital Dialects

--- a/index.html
+++ b/index.html
@@ -73,7 +73,72 @@
 		<section class="projects">
 			<h2>Projects</h2>
 
-			<div class="project p1">
+			<div class="project p8">
+				<div class="project-left">
+					<h3>Digital Dialects NFT Collection</h3>
+					<a
+						class="link"
+						href="https://digitaldialects.ryanlazzareschi.com"
+						>Website</a
+					>
+					<a
+						class="link"
+						href="https://opensea.io/collection/digital-dialects"
+						>OpenSea</a
+					>
+					<a
+						class="link"
+						href="https://github.com/ryanlazz16/nft-website"
+						>Website Github</a
+					>
+					<a
+						class="link"
+						href="https://github.com/ryanlazz16/nft-image-generator"
+						>Image Generator Github</a
+					>
+					<ul>
+						<li>
+							Programmed a Node.js script that created over
+							7500 art pieces (NFTs) from a dataset of
+							words and their translations
+						</li>
+						<li>
+							Used Google Sheets and Google Translate to
+							translate words from a dataset of the 10,000
+							most common words into 15 different languages
+							which were then filtered through the Node.js
+							script
+						</li>
+						<li>
+							Automated renaming NFT files in Python so
+							they were ready to be published to the
+							OpenSea NFT marketplace
+						</li>
+						<li>
+							Created a website using a Node.js/Express
+							Backend and React Frontend to showcase NFTs
+						</li>
+					</ul>
+					<div class="technologies">
+						<button>Javascript</button>
+						<button>HTML/CSS</button>
+						<button>Node.js/Express</button>
+						<button>React</button>
+						<button>Python</button>
+					</div>
+				</div>
+
+				<div class="project-right">
+					<a href="https://digitaldialects.ryanlazzareschi.com">
+						<img
+							src="./images/digitalDialects.png"
+							alt="Digital Dialects"
+						/>
+					</a>
+				</div>
+			</div>
+
+			<div class="project p7">
 				<div class="project-left">
 					<h3>Uber Data Visualization</h3>
 					<a class="link" href="https://youtu.be/9sgzIrooOhc"
@@ -125,7 +190,7 @@
 				</div>
 			</div>
 
-			<div class="project p7">
+			<div class="project p6">
 				<div class="project-left">
 					<h3>Graphics Algorithms with OpenGL</h3>
 					<a class="link" href="https://youtu.be/wQPlBj3w1TA"
@@ -174,7 +239,7 @@
 				</div>
 			</div>
 
-			<div class="project p2">
+			<div class="project p5">
 				<div class="project-left">
 					<h3>Smart Stock</h3>
 					<a
@@ -231,7 +296,7 @@
 				</div>
 			</div>
 
-			<div class="project p3">
+			<div class="project p4">
 				<div class="project-left">
 					<h3>Coronavirus Testing Centers</h3>
 					<a
@@ -256,7 +321,7 @@
 							built as a concept
 						</li>
 						<li>
-							Built with Native Javascript, HTML, CSS, and
+							Built with Javascript, HTML, CSS, and
 							Bootstrap for easy prototyping
 						</li>
 						<li>
@@ -284,7 +349,7 @@
 				</div>
 			</div>
 
-			<div class="project p4">
+			<div class="project p3">
 				<div class="project-left">
 					<h3>S&P 500 Visualization</h3>
 					<a
@@ -334,7 +399,7 @@
 				</div>
 			</div>
 
-			<div class="project p5">
+			<div class="project p2">
 				<div class="project-left">
 					<h3>Sorting Algorithms Visualizer</h3>
 					<a class="link" href="https://youtu.be/iYjch18GWvI"
@@ -375,7 +440,7 @@
 				</div>
 			</div>
 
-			<div class="project p6">
+			<div class="project p1">
 				<div class="project-left">
 					<h3>Neuroevolution Flappy Bird</h3>
 					<a
