Update NFT project

--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0"
-		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Ryan Lazzareschi</title>
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
@@ -35,12 +32,12 @@
 				<h4>Hi, my name is</h4>
 				<h1>Ryan Lazzareschi</h1>
 				<h5>
-					I'm a recent computer science graduate from UC Davis
-					and based in the Bay Area. My current interests are
-					full-stack web development, visualization, and machine
-					learning. I'm currently looking for internship or
-					full-time opportunities beginning in summer 2021 and
-					beyond. Feel free to contact me below!
+					I'm a recent computer science graduate from UC Davis and
+					based in the Bay Area. My current interests are full-stack
+					web development, visualization, and machine learning. I'm
+					currently looking for internship or full-time opportunities
+					beginning in summer 2021 and beyond. Feel free to contact me
+					below!
 				</h5>
 				<a href="https://github.com/ryanlazz16"
 					><button>
@@ -98,25 +95,27 @@
 					>
 					<ul>
 						<li>
-							Programmed a Node.js script that created over
-							7500 art pieces (NFTs) from a dataset of
-							words and their translations
+							Programmed a Node.js script that created over 7500
+							art pieces (NFTs) from a dataset of words and their
+							translations
 						</li>
 						<li>
-							Used Google Sheets and Google Translate to
-							translate words from a dataset of the 10,000
-							most common words into 15 different languages
-							which were then filtered through the Node.js
-							script
+							Used Google Sheets and Google Translate to translate
+							words from a dataset of the 10,000 most common words
+							into 15 different languages which were then filtered
+							through the Node.js script
 						</li>
 						<li>
-							Automated renaming NFT files in Python so
-							they were ready to be published to the
-							OpenSea NFT marketplace
+							Automated renaming NFT files in Python so they were
+							ready to be published to the OpenSea NFT marketplace
 						</li>
 						<li>
-							Created a website using a Node.js/Express
-							Backend and React Frontend to showcase NFTs
+							Utilized Python and Selenium to web scrape OpenSea
+							and automate uploading NFTs
+						</li>
+						<li>
+							Created a website using a Node.js/Express Backend
+							and React Frontend to showcase NFTs
 						</li>
 					</ul>
 					<div class="technologies">
@@ -125,6 +124,7 @@
 						<button>Node.js/Express</button>
 						<button>React</button>
 						<button>Python</button>
+						<button>Selenium</button>
 					</div>
 				</div>
 
@@ -151,9 +151,9 @@
 					>
 					<ul>
 						<li>
-							Interactive Website that visualizes over 18
-							million Uber pickups in New York City from
-							2014 and 2015 from this
+							Interactive Website that visualizes over 18 million
+							Uber pickups in New York City from 2014 and 2015
+							from this
 							<a
 								class="hyperlink"
 								href="https://www.kaggle.com/fivethirtyeight/uber-pickups-in-new-york-city"
@@ -161,13 +161,12 @@
 							>
 						</li>
 						<li>
-							Uses MapboxGL to implement an animated
-							heatmap over month, day, or hour
+							Uses MapboxGL to implement an animated heatmap over
+							month, day, or hour
 						</li>
 						<li>
-							Bar Graphs for number of rides over month,
-							day, or hour for user specified locations
-							with D3.js
+							Bar Graphs for number of rides over month, day, or
+							hour for user specified locations with D3.js
 						</li>
 						<li>Simple Node.js/Express Backend</li>
 					</ul>
@@ -198,13 +197,11 @@
 					>
 					<ul>
 						<li>
-							C++ Application that implements several
-							fundamental computer graphics algorithms with
-							OpenGL
+							C++ Application that implements several fundamental
+							computer graphics algorithms with OpenGL
 						</li>
 						<li>
-							Interact with 3D .obj objects with Arcball
-							Camera
+							Interact with 3D .obj objects with Arcball Camera
 						</li>
 						<li>
 							Phong Lighting and Gouraud Shading to produce
@@ -215,12 +212,12 @@
 							according to their depth
 						</li>
 						<li>
-							Half-Toning with 3x3 pixel pattern for
-							simulating binary display devices
+							Half-Toning with 3x3 pixel pattern for simulating
+							binary display devices
 						</li>
 						<li>
-							Shaders for Phong Lighting, Gouraud Shading,
-							and Half-Toning written in GLSL
+							Shaders for Phong Lighting, Gouraud Shading, and
+							Half-Toning written in GLSL
 						</li>
 					</ul>
 					<div class="technologies">
@@ -242,36 +239,27 @@
 			<div class="project p5">
 				<div class="project-left">
 					<h3>Smart Stock</h3>
-					<a
-						class="link"
-						href="https://youtu.be/bnfUfbfKhEE?t=563"
+					<a class="link" href="https://youtu.be/bnfUfbfKhEE?t=563"
 						>Youtube</a
 					>
-					<a
-						class="link"
-						href="https://github.com/ECS171-Group-5"
+					<a class="link" href="https://github.com/ECS171-Group-5"
 						>GitHub</a
 					>
 					<ul>
 						<li>
-							Website that predicts future stock prices for
-							100 NASDAQ stocks based on a company's
-							quarterly report using a Machine Learning
-							Model
+							Website that predicts future stock prices for 100
+							NASDAQ stocks based on a company's quarterly report
+							using a Machine Learning Model
 						</li>
 						<li>
-							Node.js/Express Backend serves stock data
-							from an AWS MySQL Database
+							Node.js/Express Backend serves stock data from an
+							AWS MySQL Database
 						</li>
+						<li>React Frontend to deliver an interactive UI</li>
+						<li>Stock and Prediction Graph made with D3.js</li>
 						<li>
-							React Frontend to deliver an interactive UI
-						</li>
-						<li>
-							Stock and Prediction Graph made with D3.js
-						</li>
-						<li>
-							Neural Network for predicting stock prices
-							built with Python and Tensorflow
+							Neural Network for predicting stock prices built
+							with Python and Tensorflow
 						</li>
 					</ul>
 					<div class="technologies">
@@ -288,10 +276,7 @@
 
 				<div class="project-right">
 					<a href="https://youtu.be/bnfUfbfKhEE?t=563">
-						<img
-							src="./images/smartStock.png"
-							alt="Smart Stock"
-						/>
+						<img src="./images/smartStock.png" alt="Smart Stock" />
 					</a>
 				</div>
 			</div>
@@ -311,22 +296,21 @@
 					>
 					<ul>
 						<li>
-							Bay Area Coronavirus Testing Centers in a
-							Simple One Page Website with goal of
-							providing people an easy way to find their
-							closest testing center available to them
+							Bay Area Coronavirus Testing Centers in a Simple One
+							Page Website with goal of providing people an easy
+							way to find their closest testing center available
+							to them
 						</li>
 						<li>
-							Website uses data from March 2020 and was
-							built as a concept
+							Website uses data from March 2020 and was built as a
+							concept
 						</li>
 						<li>
-							Built with Javascript, HTML, CSS, and
-							Bootstrap for easy prototyping
+							Built with Javascript, HTML, CSS, and Bootstrap for
+							easy prototyping
 						</li>
 						<li>
-							Google Maps API to display map of testing
-							centers
+							Google Maps API to display map of testing centers
 						</li>
 					</ul>
 					<div class="technologies">
@@ -368,14 +352,13 @@
 							sectors and stocks in the S&P 500
 						</li>
 						<li>
-							Zoomable Treemap and Parallel Coordinates
-							Chart allow for comparing all stocks in one
-							sector
+							Zoomable Treemap and Parallel Coordinates Chart
+							allow for comparing all stocks in one sector
 						</li>
 						<li>
-							Candlestick Chart shows daily prices for a
-							single stock and Difference Chart compares
-							daily price changes for two stocks
+							Candlestick Chart shows daily prices for a single
+							stock and Difference Chart compares daily price
+							changes for two stocks
 						</li>
 						<li>Visualizations built with D3.js</li>
 						<li>Stock data from Alpha Vantage API</li>
@@ -388,9 +371,7 @@
 				</div>
 
 				<div class="project-right">
-					<a
-						href="https://ryanlazz16.github.io/SP500Visualization"
-					>
+					<a href="https://ryanlazz16.github.io/SP500Visualization">
 						<img
 							src="./images/stockVisualization.png"
 							alt="S&P 500 Visualization"
@@ -412,17 +393,14 @@
 					>
 					<ul>
 						<li>
-							C++ Application that visualizes various
-							sorting algorithms
+							C++ Application that visualizes various sorting
+							algorithms
 						</li>
 						<li>
-							Implemented Selection Sort, Bubble Sort,
-							Insertion Sort, Merge Sort, and Quick Sort
+							Implemented Selection Sort, Bubble Sort, Insertion
+							Sort, Merge Sort, and Quick Sort
 						</li>
-						<li>
-							GUI Window and Graphics built with SFML
-							Library
-						</li>
+						<li>GUI Window and Graphics built with SFML Library</li>
 					</ul>
 					<div class="technologies">
 						<button>C++</button>
@@ -443,9 +421,7 @@
 			<div class="project p1">
 				<div class="project-left">
 					<h3>Neuroevolution Flappy Bird</h3>
-					<a
-						class="link"
-						href="https://youtu.be/RdK7y9B1Lsg?t=23"
+					<a class="link" href="https://youtu.be/RdK7y9B1Lsg?t=23"
 						>Youtube</a
 					>
 					<a
@@ -455,20 +431,19 @@
 					>
 					<ul>
 						<li>
-							Java Application that mimics the Flappy Bird
-							game
+							Java Application that mimics the Flappy Bird game
 						</li>
 						<li>
-							Constructed my own Neural Network to develop
-							a Machine Learning Model to play the game
+							Constructed my own Neural Network to develop a
+							Machine Learning Model to play the game
 						</li>
 						<li>
-							Learns via Neuroevolution, which simulates
-							evolution using a Genetic Algorithm
+							Learns via Neuroevolution, which simulates evolution
+							using a Genetic Algorithm
 						</li>
 						<li>
-							GUI Window and Graphics built with Java's
-							Abstract WIndow Tooltkit (AWT)
+							GUI Window and Graphics built with Java's Abstract
+							WIndow Tooltkit (AWT)
 						</li>
 					</ul>
 					<div class="technologies">
