Update NFT project

--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
 							Created a website using a Node.js/Express Backend
 							and React Frontend to showcase NFTs
 						</li>
+						<li>
+							Deployed website via Heroku and managed DNS servers
+							and SSL certificates with Cloudflare
+						</li>
 					</ul>
 					<div class="technologies">
 						<button>Javascript</button>
