Added shell project and updated resume

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<section class="projects">
 			<h2>Projects</h2>
 
-			<div class="project p8">
+			<div class="project p9">
 				<div class="project-left">
 					<h3>Digital Dialects NFT Collection</h3>
 					<a
@@ -121,6 +121,11 @@
 							Deployed website via Heroku and managed DNS servers
 							and SSL certificates with Cloudflare
 						</li>
+						<!-- <li>
+							Built an auto clicker to veriify blockchain
+							transactions on a phone using spare Legos and a
+							microcontroller programmed with Arduino
+						</li> -->
 					</ul>
 					<div class="technologies">
 						<button>Javascript</button>
@@ -142,7 +147,7 @@
 				</div>
 			</div>
 
-			<div class="project p7">
+			<div class="project p8">
 				<div class="project-left">
 					<h3>Uber Data Visualization</h3>
 					<a class="link" href="https://youtu.be/9sgzIrooOhc"
@@ -193,7 +198,7 @@
 				</div>
 			</div>
 
-			<div class="project p6">
+			<div class="project p7">
 				<div class="project-left">
 					<h3>Graphics Algorithms with OpenGL</h3>
 					<a class="link" href="https://youtu.be/wQPlBj3w1TA"
@@ -240,7 +245,7 @@
 				</div>
 			</div>
 
-			<div class="project p5">
+			<div class="project p6">
 				<div class="project-left">
 					<h3>Smart Stock</h3>
 					<a class="link" href="https://youtu.be/bnfUfbfKhEE?t=563"
@@ -282,6 +287,39 @@
 					<a href="https://youtu.be/bnfUfbfKhEE?t=563">
 						<img src="./images/smartStock.png" alt="Smart Stock" />
 					</a>
+				</div>
+			</div>
+
+			<div class="project p5">
+				<div class="project-left">
+					<h3>Simple Shell</h3>
+					<ul>
+						<li>
+							Constructed a simple shell in the C programming
+							language
+						</li>
+						<li>
+							Efficiently reads, parses, and executes commands
+							from the command line and supports basic error
+							checking
+						</li>
+						<li>
+							Implemented built-in commands including cd, pwd, and
+							exit, as well as an extra command to use environment
+							variables
+						</li>
+						<li>
+							Handles piping with forked processes and supports
+							output redirection to a file
+						</li>
+					</ul>
+					<div class="technologies">
+						<button>C</button>
+					</div>
+				</div>
+
+				<div class="project-right">
+					<img src="./images/shell.png" alt="Simple Shell" />
 				</div>
 			</div>
 
